--- a/iosappthree/ios/Runner/Info.plist
+++ b/iosappthree/ios/Runner/Info.plist
@@ -39,6 +39,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>io.flutter.embedded_views_preview</key>
+    <string>YES</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Describe why your app needs AR here.</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
